<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f4fcff">

    <TextView
        android:id="@+id/textViewScreenTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:text="@string/delicious"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutSearch"
        style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="24dp"
        app:endIconContentDescription="@string/search"
        app:endIconDrawable="@drawable/search"
        app:endIconMode="custom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewScreenTitle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/editTextSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/search_for_a_recipe"
            android:imeOptions="actionSearch"
            android:inputType="text"
            android:singleLine="true" />
    </com.google.android.material.textfield.TextInputLayout>


    <HorizontalScrollView
        android:id="@+id/horizontalScrollChips"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="24dp"
        android:fillViewport="true"
        android:scrollbars="none"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textInputLayoutSearch">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chipGroupFilters"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:chipSpacingHorizontal="8dp"
            app:singleLine="true"
            app:singleSelection="false">

            <com.google.android.material.chip.Chip
                android:id="@+id/chipDiet"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="false"
                android:text="@string/diet"
                android:textColor="@color/black"
                app:checkedIconVisible="false"
                app:chipIcon="@drawable/arrow_drop_down"
                app:chipIconVisible="true" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipCuisine"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="false"
                android:text="@string/cuisine"
                android:textColor="@color/black"
                app:checkedIconVisible="false"
                app:chipIcon="@drawable/arrow_drop_down"
                app:chipIconVisible="true" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipMeal"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="false"
                android:text="@string/meal"
                android:textColor="@color/black"
                app:checkedIconVisible="false"
                app:chipIcon="@drawable/arrow_drop_down"
                app:chipIconVisible="true" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipDish"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="false"
                android:text="@string/dish"
                android:textColor="@color/black"
                app:checkedIconVisible="false"
                app:chipIcon="@drawable/arrow_drop_down"
                app:chipIconVisible="true" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chipHealth"
                style="@style/Widget.MaterialComponents.Chip.Filter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checkable="false"
                android:text="@string/health"
                android:textColor="@color/black"
                app:checkedIconVisible="false"
                app:chipIcon="@drawable/arrow_drop_down"
                app:chipIconVisible="true" />
        </com.google.android.material.chip.ChipGroup>
    </HorizontalScrollView>

    <TextView
        android:id="@+id/textViewSubTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:text="@string/balanced_recipes"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/horizontalScrollChips" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewRecipes"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textViewSubTitle" />
</androidx.constraintlayout.widget.ConstraintLayout>
